# project-foresight

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  docker-compose.yml  example.env  pyproject.toml
.github/: analyze_git_history.py  get_version_bump_type.py  valid_git_history.py
.github/workflows/: bump_version.yml  precommit_checks.yml  python_tests.yml
diagram/: end_state.drawio
foresight/indicator_services/: indicator.py  moving_average_indicator.py
foresight/interface_service/: app.py
foresight/interface_service/templates/: index.html  sma.html
foresight/models/: forex_data.py  pricing.py  stream.py
foresight/stream_service/: app.py
foresight/stream_service/models/: forex_data.py  pricing.py  stream.py
foresight/utils/: aws.py  database.py  exceptions.py  logger.py
foresight/utils/models/: forex_data.py  indicator_result.py  subscription_feed.py  subscription_feeds.py
foresight/window_service/: app.py
indicator_services/: indicator.py  instrument_pricing_indicator.py  moving_average_indicator.py
interface_service/: app..py  app.py
interface_service/templates/: index.html  sma.html
stream-service/: app.py  example.env  pyproject.toml
stream_service/: app.py
tests/: conftest.py
tests/indicator_services/: indicator_test.py
tests/stream_service/: conftest.py  stream_service_test.py  test_app.py
tests/stream_service/models/: test_forex_data.py
tests/utils/models/: forex_data_test.py  subscription_feeds_test.py  test_forex_data.py
tests/window_service/: window_service_test.py
utils/: aws.py  database.py  logger.py
window_service/: app.py
