[tool.poetry]
name = "project-foresight"
version = "0.1.0"
description = "Continuous integration of market data, analysis, and presentation."
authors = ["Alexander Whipp <alexruns4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
oandapyV20 = "^0.7.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
six = "^1.16.0"
psycopg2-binary = "^2.9.7"
pandas = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
